--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 </head>
 <body>
 <h1>Odin Recipes</h1>
+<ul>
+    <li><a href="recipes/coffee.html"> How to make delicious coffee</a></li>
+    <li><a href="recipes/momos.html">How to make momo's</a></li>
+    <li><a href="recipes/hot-chocolate.html">How to make hot hot chocolate</a></li>
+</ul>
 </body>
 </html>
