--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="style.css">
         <meta charset="utf-8">
         <title>Recipes page</title>
     </head>
@@ -8,9 +9,9 @@
     <body>
         <h1>Odin Recipes</h1>
             <ul>
-                <li><a href="recipes/coffee.html"> How to make delicious coffee</a></li>
-                <li><a href="recipes/momos.html">How to make momo's</a></li>
-                <li><a href="recipes/hot-chocolate.html">How to make hot hot chocolate</a></li>
+                <li><a href="recipes/coffee.html"> How to make delicious <b><i>coffee</i></b></a></li>
+                <li><a href="recipes/momos.html">How to make <b><i>momo's</i></b></a></li>
+                <li><a href="recipes/hot-chocolate.html">How to make <b><i>hot chocolate</i></b></a></li>
             </ul>
     </body>
 </html>
