Add style for each page and add button on the links

--- a/recipes/momos.html
+++ b/recipes/momos.html
@@ -9,10 +9,10 @@
     <body>
         <h1>Momo's recipe</h1>
             <img src="images/momos.jpeg" alt="A black plate on a white table with 5 momos on it and a red sauces with it in a bowl">
-            <h3><em>Description</em></h3>
+            <h3 class="des crip"><em>Description</em></h3>
                 <p>Momo are bite-size dumplings made with a spoonful of stuffing wrapped in dough. Momo are usually steamed, though they are sometimes fried or steam-fried. Meat or vegetables fillings becomes succulent as it produces an intensively flavored broth sealed inside the wrappers. Momo is an important dish for Tibetans, both for everyday and festivals</p>
                 <p>Momo is the colloquial form of the Tibetan word "mog mog".[2] It is possible that this Tibetan word is borrowed from the Chinese term momo (馍馍), a name traditionally used in northwestern Chinese dialects for bread.[3] The word mo (馍) itself means food related to flour.</p>
-            <h3><em>Ingredients</em></h3>
+            <h3 class="in"><em>Ingredients</em></h3>
                 <ul>
                     <li>all-purpose flour</li>
                     <li>salt</li>
@@ -23,7 +23,7 @@
                     <li>garlic</li>
                     <li>spring onion</li>
                 </ul>
-            <h3><em>Steps</em></h3>
+            <h3 class="step"><em>Steps</em></h3>
                 <ol>
                     <li>Take 1 cup all-purpose flour, ¼ teaspoon salt and ½ teaspoon oil in a bowl. Mix well with a spoon.</li>
                     <li> Add 2 to 3 tablespoon water in parts and begin to knead to a firm dough. Do not make the dough soft as then it becomes difficult to shape the dumplings.</li>
