--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        
             <ul>
-                <li><a href="recipes/coffee.html"> How to make delicious <b><i>coffee</i></b></a></li>
-                <li><a href="recipes/momos.html">How to make <b><i>momo's</i></b></a></li>
-                <li><a href="recipes/hot-chocolate.html">How to make <b><i>hot chocolate</i></b></a></li>
+               <button> 
+                <li><a href="recipes/coffee.html"> How to make delicious <b><i>coffee</i></b></a></li></button>
+            </ul>
+               <ul>
+                <button>
+                    <li><a href="recipes/momos.html">How to make <b><i>momo's</i></b></a></li>
+                </button>
+            </ul>
+               <ul>
+                <button>
+                    <li><a href="recipes/hot-chocolate.html">How to make <b><i>hot chocolate</i></b></a></li>
+                </button>
             </ul>
     </body>
 </html>
