--- a/recipes/coffee.html
+++ b/recipes/coffee.html
@@ -11,19 +11,19 @@
     <body>
         <h1>Coffe recipe</h1>
             <img src="images/coffee.png" alt="Two coffee glass jars with black coffee in it and a print on it saying coffe chocolate and coffee beans around the jarsan a white table ">
-            <h3><em>Description</em></h3>
+            <h3 class="des crip"><em>Description</em></h3>
                 <p>Coffee is a drink prepared from roasted coffee beans. Darkly colored, bitter, and slightly acidic, coffee has a stimulating effect on humans, primarily due to its caffeine content. It is the most popular hot drink in the world.
                     Seeds of the Coffea plant's fruits are separated to produce unroasted green coffee beans. The beans are roasted and then ground into fine particles that are typically steeped in hot water before being filtered out, producing a cup of coffee.</p>
                 <p>Though coffee is now a global commodity, it has a long history tied closely to food traditions around the Red Sea. The earliest credible evidence of coffee drinking in the form of the modern beverage appears in modern-day Yemen from the mid-15th century in Sufi shrines, where coffee seeds were first roasted and brewed in a manner similar to current methods. The Yemenis procured the coffee beans from the Ethiopian Highlands via coastal Somali intermediaries and began cultivation
                 </p>
-            <h3><em>Ingredients</em></h3>
+            <h3 class="in"><em>Ingredients</em></h3>
                 <ul>
                     <li>Coffee beans</li>
                     <li>Water</li>
                     <li>Sugar</li>
                     <li>Milk</li>
                 </ul>
-            <h3><em>Steps</em></h3>
+            <h3 class="step"><em>Steps</em></h3>
                 <ol>
                     <li> In a cup take 1.5 teaspoons instant coffee. </li>
                     <li> add 1.5 tablespoons sugar or add as per taste.</li>
