--- a/recipes/hot-chocolate.html
+++ b/recipes/hot-chocolate.html
@@ -10,11 +10,11 @@
     <body>
         <h1>Hot chocolate</h1>
             <img src="images/hot chocolate.webp" alt="A white cup with hot chocolate inside it mashrmellos floating in th cup and around the sauser with a bar of chocolate besides the cup">
-            <h3><em>Description</em></h3>
+            <h3 class="des crip"><em>Description</em></h3>
                 <p>Hot chocolate, also known as hot cocoa or drinking chocolate, is heated chocolate milk. Hot chocolate made with melted chocolate is sometimes called drinking chocolate, characterized by less sweetness and a thicker consistency
                 </p>
                 <p>The first chocolate drink is believed to have been created by the Maya around 2,500–3,000 years ago, and a cocoa drink was an essential part of Aztec culture by 1400 AD, by which they referred to as xocōlātl.[2] The drink became popular in Europe after being introduced from Mexico in the New World and has undergone multiple changes since then. Until the 19th century, hot chocolate was used medicinally to treat ailments such as liver and stomach diseases. </p>
-            <h3><em>Ingredients</em></h3>
+            <h3 class="in"><em>Ingredients</em></h3>
                 <ul>
                     <li>8 ounces dark, semi-sweet, or bittersweet chocolate (60% cacao, preferably)</li>
                     <li>4 cups whole milk (or a nondairy milk)</li>
@@ -22,7 +22,7 @@
                     <li>1 teaspoon vanilla extract</li>
                     <li>1/8 teaspoon salt</li>
                 </ul>
-            <h3><em>Steps</em></h3>
+            <h3 class="step"><em>Steps</em></h3>
                 <ol>
                     <li>Finely chop the chocolate into small pieces. The pieces have to be able to dissolve easily in the liquid. Set aside.</li>
                     <li>Place the milk into a small, thick-bottomed pot on low heat and bring to a low simmer. Whisk once in a while to ensure that the milk doesn't stick to the bottom of the pan.
